<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".DataTransferActivity">

    <TextView
        android:id="@+id/tvdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Data_Transfer"
        android:padding="20dp"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/eteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/enter_your_name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/eterollno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/enter_roll_no"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/eteTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/enter_temperature"
        android:textSize="20sp"/>

</LinearLayout>